--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
   "theme_color": "#ffffff",
   "background_color": "#ffffff",
   "display": "standalone",
-  "start_url": "/index.html",
+  "start_url": "pwa/index.html",
   "icons": [
     {
       "src": "images/icons/icon-72x72.png",
